<resources>
    <string name="app_name">My Supermarket</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="lang_en_label">English</string>
    <string name="lang_zh_label">Traditional Chinese</string>
    <string name="lang_cn_label">Simplified Chinese</string>
    <string name="notifications">Notifications</string>
    <string name="shopping_history">Previous Purchases</string>
    <string name="lang_en_value" translatable="false">en-US</string>
    <string name="lang_zh_value" translatable="false">zh-HK</string>
    <string name="lang_cn_value" translatable="false">zh-CN</string>

    <string-array name="pref_lang_options_label">
        <item>@string/lang_en_label</item>
        <item>@string/lang_zh_label</item>
        <item>@string/lang_cn_label</item>
    </string-array>

    <string-array name="pref_lang_options_value" translatable="false">
        <item>@string/lang_en_value</item>
        <item>@string/lang_zh_value</item>
        <item>@string/lang_cn_value</item>
    </string-array>
    <string name="pref_lang_key" translatable="false">lang</string>
    <string name="pref_recent_purchase_key" translatable="false">recent_purchase</string>
    <string name="recent_purchase_label">Max records in Previous Purchases</string>
    <string name="pref_recent_purchase_validation_error">Please input an integer between 1 and 30.</string>
    <string name="add_wishlist_item">Add Item</string>
    <string name="wishlist_item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="search_nearby_store">Search In Nearby Store</string>
    <string name="search_a_store">Search A Store</string>

    <string name="pick_up">Pick Item</string>
    <string name="put_down">Put Down</string>
    <string name="district">District</string>
    <string name="quantity">Quantity:</string>
    <string name="total_price">Total Price:</string>
    <string name="opening_hour">Opening Hours:</string>
    <string name="price">Price:</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_validation_error">Please input a positive integer.</string>
    <string name="status_in_cart">In Cart</string>
    <string name="status_picked_up">Picked up</string>
    <string name="checkout">Complete Check out</string>
    <string name="system_error">System Error Occurred. Please try again later.</string>
    <string name="checkout_summary" translatable="false">Checkout Summary</string>
    <string name="add_to_shopping_cart">Add to Shopping Cart</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="added_to_cart">added to shopping cart</string>

</resources>
